[metadata]
name = beets-dynamicrange
version = 0.0.1
author = Michael Auchter
author_email = a@phire.org
description = dynamicrange for beets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/auchter/beets-dynamicrange
project_urls =
    Bug Tracker = https://github.com/auchter/beets-dynamicrange/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = beetsplug
python_requires = >=3.6
install_requires =
  beets

[options.packages.find]
where = src
